@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: lsearch.test,v 1.8 2002/03/06 11:28:08 dkf Exp $
+# RCS: @(#) $Id: lsearch.test,v 1.9 2003/02/11 21:54:48 hobbs Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -339,6 +339,11 @@ test lsearch-13.8 {combinations: -start, -inline and -not} {
 test lsearch-14.1 {make sure no shimmering occurs} {
     set x [expr int(sin(0))]
     lsearch -start $x $x $x
+} 0
+
+test lsearch-15.1 {lsearch -regexp shared object} {
+    set str a
+    lsearch -regexp $str $str
 } 0
 
 # cleanup
